# FolderTimeEditor

./: .gitignore  .trigger_build  README.md  build.spec  index.html  main.py  package-lock.json  package.json  requirements.txt  test_report.txt  tsconfig.app.json
.github/workflows/: build.yml
core/: __init__.py  timestamp_handler.py
gui/: __init__.py  app.py  dialogs.py  widgets.py
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: file_times.rs  file_walk.rs  mod.rs  owner.rs
src/components/: FileList.vue  OperationLog.vue  PreviewDialog.vue  ProfileDialog.vue  TimeSettings.vue
src/stores/: appStore.ts
src/types/: index.ts
tests/: __init__.py  test_core.py  test_gui.py
