[package]
name = "folder-time-editor"
version = "2.0.0"
description = "文件夹时间批量修改工具"
authors = ["titanks-lab"]
edition = "2021"

[lib]
name = "folder_time_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
