[package]
name = "YT-FileTimeEditor"
version = "2.0.0"
description = "文件时间编辑器"
authors = ["titanks-lab"]
edition = "2021"

[lib]
name = "yt_file_time_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
